# locumtracker

./: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  TODO.md
Android/: .gitignore  CHANGELOG.md  README.md  build.gradle.kts  settings.gradle.kts
Android/.github/workflows/: android-ci.yml
Android/app/: build.gradle.kts  google-services.json  proguard-rules.pro
Android/core/: build.gradle.kts
Android/scripts/: prepare-release.sh
LocumTracker/LocumTracker/: ContentView.swift  Info.plist  Localizable.xcstrings  LocumTracker.entitlements  LocumTrackerApp.swift  MainTabView.swift
LocumTracker/LocumTracker.xcodeproj/: project.pbxproj
LocumTracker/LocumTracker/Helpers/: EarningsCalculator.swift
LocumTracker/LocumTracker/Services/: PendingAttachmentProcessor.swift
LocumTracker/LocumTracker/Views/: ActiveQuarterHistoryView.swift  AddAssignmentSheet.swift  (+21 more)
LocumTracker/LocumTrackerShare/: Info.plist  LocumTrackerShare.entitlements  ShareExtensionView.swift  ShareViewController.swift
LocumTracker/LocumTrackerTests/: LocumTrackerTests.swift
LocumTracker/LocumTrackerUITests/: LocumTrackerUITests.swift  LocumTrackerUITestsLaunchTests.swift
OCR_samples/: IMG_4535_expected.txt  IMG_9728_expected.txt  IMG_9885_expected.txt
doc/developers/: BUILD.md  README.md
doc/llm/: README.md  rural-subsidy-overview.md  wip_doctor_stream_fps_rules.md
doc/planning/: paddleocr-android-implementation.md  paddleocr-ios-macos-implementation.md
doc/research/: receipt-extraction-options.md
doc/user/: README.md
scripts/: prepare_ocr_models.py  pyproject.toml
(+124 files in other folders)
