[project]
name = "locumtracker-scripts"
version = "1.0.0"
description = "Development scripts for LocumTracker"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
]

[tool.uv]
# Use uv for dependency management
package = false
